replaced main with section... still getting odd overflow issue until section 3, will address soon

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 }
 
 a{
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 header{
@@ -43,12 +43,13 @@ nav li a{
   font-weight: 300;
 }
 
-main{
+section{
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 
-main.one{
+section.one{
   background: #6ab04c;
   text-align: center;
 }
@@ -60,15 +61,16 @@ main.one{
   padding-top: 35vh;
 }
 
-main.two{
+section.two{
   background: #eb4d4b;
+  height: 75vh;
 }
 
-main.three{
+section.three{
   background: #f0932b;
 }
 
-main.four{
+section.four{
   background: #f9ca24;
 }
 
@@ -76,7 +78,7 @@ main.four{
 .card-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  padding-top: 30vh;
+  padding-top: 20vh;
   grid-column-gap: 3em;
   margin: 0 2em;
 }
